<resources>
    <string name="app_name">trb1</string>
    <string name="ano_semestre">Ano/Semestre</string>
    <string name="hrs_planej">% Hrs Planej.</string>
    <string name="total_hrs">Total Horas</string>
    <string name="parcial">% Parcial</string>
    <string name="editar">Editar</string>
    <string name="novo_planejamento">Novo Planejamento</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="listas_disciplinas">Listas Disciplinas</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">Voltar</string>
    <string name="nova_disciplina">Nova</string>
    <string name="disciplina">Disciplina</string>
    <string name="horas">Horas</string>
    <string name="area">Área</string>
    <string name="new_hora_plan">% Horas Planejadas</string>
</resources>
