<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".DisciplinasCursadasActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="80dp"
        android:background="#f1f1f1"
        android:paddingBottom="1dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp">

        <TableRow android:id="@+id/lista_head">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/disciplina"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/horas"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/area"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/editar"
                android:textStyle="bold" />

        </TableRow>

        <!--LINHA 1-->
        <TableRow>

            <TextView
                android:id="@+id/id_dc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="BD" />

            <TextView
                android:id="@+id/id_hr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="20" />

            <TextView
                android:id="@+id/id_ar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="Exatas" />

            <TextView
                android:id="@+id/list_dc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="@string/editar" />

        </TableRow>

        <!--LINHA 2-->
        <TableRow>

            <TextView
                android:id="@+id/id_dc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="Computação I" />

            <TextView
                android:id="@+id/id_hr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="20" />

            <TextView
                android:id="@+id/id_ar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="Exatas" />

            <TextView
                android:id="@+id/list_dc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="@string/editar" />

        </TableRow>

        <!--LINHA 3-->
        <TableRow>

            <TextView
                android:id="@+id/id_dc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="Inglês" />

            <TextView
                android:id="@+id/id_hr3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="20" />

            <TextView
                android:id="@+id/id_ar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="Linguas" />

            <TextView
                android:id="@+id/list_dc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="@string/editar" />

        </TableRow>

        <!--LINHA 4-->
        <TableRow>

            <TextView
                android:id="@+id/id_dc4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="Espanhol" />

            <TextView
                android:id="@+id/id_hr4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="20" />

            <TextView
                android:id="@+id/id_ar4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="Linguas" />

            <TextView
                android:id="@+id/list_dc4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="@string/editar" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btn_volt_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="8dp"
        android:text="@string/voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_nova_disc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="8dp"
        android:text="@string/nova_disciplina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>