<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".PlanejamentosActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="10dp"
        android:background="#f1f1f1"
        android:paddingBottom="1dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp">

        <TableRow android:id="@+id/lista_head">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/ano_semestre"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/hrs_planej"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/total_hrs"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/parcial"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/editar"
                android:textStyle="bold" />
        </TableRow>

        <!--LINHA 1-->
        <TableRow android:id="@+id/lista_1">

            <TextView
                android:id="@+id/pdc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="2019-1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="25%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="16,66%" />

            <TextView
                android:id="@+id/edit_ls_1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="@string/editar" />
        </TableRow>

        <!--LINHA 2-->
        <TableRow android:id="@+id/lista_2">

            <TextView
                android:id="@+id/pdc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="2019-2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="25%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="0%" />

            <TextView
                android:id="@+id/edit_ls_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="@string/editar" />
        </TableRow>

        <!--LINHA 3-->
        <TableRow android:id="@+id/lista_3">

            <TextView
                android:id="@+id/pdc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="2020-1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="25%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="0%" />

            <TextView
                android:id="@+id/edit_ls_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="@string/editar" />
        </TableRow>

        <!--LINHA 4-->
        <TableRow android:id="@+id/lista_4">

            <TextView
                android:id="@+id/pdc4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="2020-2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="25%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="0%" />

            <TextView
                android:id="@+id/edit_ls_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="@string/editar" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btn_novo_planejamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/novo_planejamento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>